# async_scraper

./: constants.py  data_26_06_2021_00_51.json  main.py  pyproject.toml
async_scraper/: scraper.py
async_scraper/resources/log/: main.json
async_scraper/utils/: configuration_logger.py
