[tool.poetry]
name = "async_scraper"
version = "0.1.0"
description = "Parsing a car tire website"
authors = ["alex_tezin <alexandertezin1999@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
requests = "^2.25.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
